--- a/app/views/skm/settings/edit.html.erb
+++ b/app/views/skm/settings/edit.html.erb
@@ -1,52 +1,51 @@
 <%= app_title %>
 <%= form_tag({:action=>"update"},:id => "settings_form", :name => "settings_form") do %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_skm_setting_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= submit_tag t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=@setting_names[:SKM_HEADER_AUDIT]%></label></td>
+            <td class="data-2col"><%= select_tag "SKM_HEADER_AUDIT", nullable_options_for_select(available_system_yes_no.collect{|m| [m[:meaning], m.lookup_code]}, @setting_values[:SKM_HEADER_AUDIT])%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-                <tr>
-                  <td class="labelCol"><label><%=@setting_names[:SKM_HEADER_AUDIT]%></label></td>
-                  <td class="data2Col"><%= select_tag "SKM_HEADER_AUDIT", nullable_options_for_select(available_system_yes_no.collect{|m| [m[:meaning], m.lookup_code]}, @setting_values[:SKM_HEADER_AUDIT])%></td>
-                </tr>
-
-        </tbody>
-      </table>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_skm_setting_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= submit_tag t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
