--- a/app/views/skm/settings/index.html.erb
+++ b/app/views/skm/settings/index.html.erb
@@ -1,29 +1,21 @@
 <%= setting_title %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_setting) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_setting) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit"},:class=>"btn btn-primary"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+      <table class="show-table">
         <tbody>
-
             <tr>
-              <td class="labelCol"><label><%= @setting_names[:SKM_HEADER_AUDIT]%></label></td>
-              <td class="data2Col"><%= check_img(@setting_values[:SKM_HEADER_AUDIT])%></td>
+              <td class="label-col"><label><%= @setting_names[:SKM_HEADER_AUDIT]%></label></td>
+              <td class="data-2col"><%= check_img(@setting_values[:SKM_HEADER_AUDIT])%></td>
             </tr>
-
         </tbody>
       </table>
-    </div>
   </div>
 </div>
