加入jquery treeview相关的资源文件:css,js以及图片

--- a/modules/bootstrap/app/assets/stylesheets/application.css
+++ b/modules/bootstrap/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
  *= require_self
  *= require bootstrap/bootstrap_and_overrides
  *= require framework/framework
+ *= require plugins/treeview
 */
 
 
