--- a/app/views/skm/columns/index.html.erb
+++ b/app/views/skm/columns/index.html.erb
@@ -1,82 +1,59 @@
 <%= setting_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_column_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+      <table class="show-table">
+        <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_column_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
+              <td style="width:1%">
+                <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data",  :format=>:json),
+                         :tree_id => "tree-div",
+                         :li_attrs => "id,sc_id,sc_code,column_name,column_description" } %>
+
               </td>
-              <td class="pbHelp">
-                <div id="statusesSearchBox"></div>
+              <td class="data-2col" style="vertical-align:top;">
+                  <table class="page-block-header"><tr>
+                      <td class="page-block-title">
+                        <h2 class="block-title"></h2>
+                      </td>
+                      <td class="page-block-button">
+                        <%= link_to t(:edit), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn"}%>
+                        <%= link_to t(:label_skm_column_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn"}%>
+                      </td>
+                  </tr></table>
+
+                  <div class="page-block-body">
+                      <table class="show-table">
+                        <tbody>
+                            <tr>
+                              <td class="label-col"><label><%=(t :label_skm_column_code)%></label></td>
+                              <td class="data-2col" id="column_code"></td>
+                            </tr>
+                            <tr>
+                              <td class="label-col"><label><%=(t :name)%></label></td>
+                              <td class="data-2col" id="column_name"></td>
+                            </tr>
+                            <tr>
+                              <td class="label-col"><label><%=t(:description)%></label></td>
+                              <td class="data-2col" id="column_description"></td>
+                            </tr>
+                        </tbody>
+                      </table>
+                  </div>
+
               </td>
             </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div class="pbWizardBody">
-          <div class="secondary-palette">
-            <div class="pbBody ">
-                <div class="pbSubsection">
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                        <tr>
-                          <td style="width:18%">
-                            <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data",  :format=>:json),
-                                     :tree_id => "tree-div",
-                                     :li_attrs => "id,sc_id,sc_code,column_name,column_description" } %>
-
-                          </td>
-                          <td class="data2Col">
-                            <div id="ep" class="detail-block page-block">
-                              <div class="pbHeader">
-                                <table cellpadding="0" cellspacing="0" border="0">
-                                  <tbody>
-                                    <tr>
-                                      <td class="pbTitle"></td>
-                                      <td class="pbButton">
-                                        <div class="button" id="edit_button"><%= link_to t(:edit), {}, {:onclick => "javascript:void(0)", :href=>"#"}%></div>
-                                        <div class="button" id="new_child_button"><%= link_to t(:label_skm_column_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#"}%></div>
-                                      </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </div>
-                              <div class="pbBody">
-                                <div class="pbSubsection">
-                                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                                    <tbody>
-                                        <tr>
-                                          <td class="labelCol"><label><%=(t :label_skm_column_code)%></label></td>
-                                          <td class="data2Col" id="column_code"></td>
-                                        </tr>
-                                        <tr>
-                                          <td class="labelCol"><label><%=(t :name)%></label></td>
-                                          <td class="data2Col" id="column_name"></td>
-                                        </tr>
-                                        <tr>
-                                          <td class="labelCol"><label><%=t(:description)%></label></td>
-                                          <td class="data2Col" id="column_description"></td>
-                                        </tr>
-                                    </tbody>
-                                  </table>
-                                </div>
-                              </div>
-                            </div>
-
-                          </td>
-                        </tr>
-                    </tbody>
-                  </table>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+        </tbody>
+      </table>
+  </div>
 </div>
 <script type="text/javascript">
   $(document).ready(function(){
