修改知识库管理==>知识分类 所有页面bootstrap样式

--- a/app/views/skm/columns/index.html.erb
+++ b/app/views/skm/columns/index.html.erb
@@ -25,8 +25,8 @@
                         <h2 class="block-title"></h2>
                       </td>
                       <td class="page-block-button">
-                        <%= link_to t(:edit), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn"}%>
-                        <%= link_to t(:label_skm_column_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn"}%>
+                        <%= link_to t(:edit), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn",:id=>"edit_button"}%>
+                        <%= link_to t(:label_skm_column_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn",:id=>"new_child_button"}%>
                       </td>
                   </tr></table>
 
@@ -61,8 +61,8 @@
           $("#column_code").html(element.attr("sc_code"));
           $("#column_name").html(element.attr("column_name"));
           $("#column_description").html(element.attr("column_description"));
-          $("#edit_button").html("<a href='/skm_columns/" + element.attr("sc_id") + "/edit'><%= t :edit%></a>");
-          $("#new_child_button").html("<a href='/skm_columns/new?parent_column_id=" + element.attr("sc_id") +"'><%= t :label_skm_column_new_child%></a>");
+          $("#edit_button").attr("href","/skm_columns/" + element.attr("sc_id") + "/edit");
+          $("#new_child_button").attr("href","/skm_columns/new?parent_column_id=" + element.attr("sc_id"));
       });
   });
 </script>
