--- a/app/views/irm/report_type_categories/show.html.erb
+++ b/app/views/irm/report_type_categories/show.html.erb
@@ -1,43 +1,37 @@
-<%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= common_title(:show_data=>@report_type_category[:name]) %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= @report_type_category[:name] %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @report_type_category},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= @report_type_category[:name] %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @report_type_category}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_report_type_category_code)%></label></td>
+            <td class="data-col"><div><%= @report_type_category.code %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+                    <tr>
+            <td class="label-col"><label ><%=t(:label_irm_report_type_category_name)%></label></td>
+            <td class="data-col"><div><%= @report_type_category[:name] %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_report_type_category_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><div><%= @report_type_category[:description] %></div></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_report_type_category_code)%></label></td>
-              <td class="dataCol"><div><%= @report_type_category.code %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-                      <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_report_type_category_name)%></label></td>
-              <td class="dataCol"><div><%= @report_type_category[:name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_report_type_category_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><div><%= @report_type_category[:description] %></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@report_type_category} %>
