--- a/app/views/irm/report_types/_new_step_1.html.erb
+++ b/app/views/irm/report_types/_new_step_1.html.erb
@@ -1,95 +1,101 @@
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "1", :m => "2") %>
+<%= form_for(@report_type,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="report_type_business_object_id"><%=t(:label_irm_report_type_business_object)%></label></td>
+            <td class="data-col"><%=f.blank_select :business_object_id,available_business_object_with_id,{},:required=>true ,:id=>"report_type_business_object_id"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+
+          </tr>
+          <tr>
+            <td class="label-col"><label for="report_type_category_id"><%=t(:label_irm_report_type_category)%></label></td>
+            <td class="data-col"><%=f.blank_select :category_id,available_report_type_category,{},:required=>true ,:id=>"report_type_category_id"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="report_type_code"><%=t(:label_irm_report_type_code)%></label></td>
+            <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_type_code",:irm_uppercase=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="report_type_name"><%=t(:label_irm_report_type_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"report_type_name"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="report_type_description"><%=t(:label_irm_report_type_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:id=>"report_type_description"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:next), {:action => "new"},{:class=>"submit btn"} %>
+        <%= link_to t(:cancel), {:controller => "irm/report_types",:action => "index"},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:step_n, :n => "1") %><%= t(:label_irm_report_type_define) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "1", :m => "2") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @report_type%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_report_type_business_object_select) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "1") %><%= t(:label_irm_report_type_define) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-  <%= error_for @report_type%>
-  <%= form_for(@report_type,:url=>{:action=>"new"},:builder => LabellingFormBuilder) do |f| %>
-  <%= f.hidden_field(:step) %>
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_report_type_business_object_select) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                      <tr>
-                        <td class="labelCol"><label for="report_type_business_object_id"><%=t(:label_irm_report_type_business_object)%></label></td>
-                        <td class="dataCol"><%=f.blank_select :business_object_id,available_business_object_with_id,{},:required=>true ,:id=>"report_type_business_object_id"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                  </tbody>
-                </table>
-            </div>
-            <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-              <h3><%= t(:label_common_info) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                      <tr>
-                        <td class="labelCol"><label for="report_type_code"><%=t(:label_irm_report_type_code)%></label></td>
-                        <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_type_code",:irm_uppercase=>true%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_type_name"><%=t(:label_irm_report_type_name)%></label></td>
-                        <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"report_type_name"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_type_description"><%=t(:label_irm_report_type_description)%></label></td>
-                        <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4, :required=>true ,:id=>"report_type_description"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_type_category_id"><%=t(:label_irm_report_type_category)%></label></td>
-                        <td class="dataCol"><%=f.blank_select :category_id,available_report_type_category,{},:required=>true ,:id=>"report_type_category_id"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                  </tbody>
-                </table>
-            </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b   %>
+          </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:controller => "irm/report_types",:action => "index"}%></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-    <%end%>
-  </div>
-</div>
+
+<% end %>
