--- a/app/views/irm/report_types/index.html.erb
+++ b/app/views/irm/report_types/index.html.erb
@@ -1,38 +1,19 @@
-<%= page_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_report_type_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="report_typesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="report_types" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("report_types",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       { :key => "name", :label => t(:label_irm_report_type_name),:searchable=>true },
-                       { :key => "description", :label => t(:label_irm_report_type_description),:searchable=>true },
-                       { :key => "category_name", :label => t(:label_irm_report_type_category)},
-                       { :key => "business_object_name", :label => t(:label_irm_report_type_business_object) },
-                       { :key => "created_at", :label => t(:created_at) }
-                      ],{:paginator_box=>"report_typesPaginatorBox",:search_box=>"report_typesSearchBox"})%>
-        <div id="report_typesPaginatorBox"></div>
-      </div>
-    </div>
+<%= common_title%>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_report_type_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("report_types",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"paginator",:search_box=>"searchBox"})%>  </div>
 </div>
 
 
