--- a/app/views/irm/tabs/show.html.erb
+++ b/app/views/irm/tabs/show.html.erb
@@ -3,7 +3,7 @@
 <div class="show-block">
   <table class="page-block-header"><tr>
     <td class="page-block-title">
-      <h2 class="block-title"><%=t(:label_irm_menu)%></h2>
+      <h2 class="block-title"><%=t(:label_irm_tab)%></h2>
     </td>
     <td class="page-block-button">
       <%= link_to t(:edit), {:action => "edit", :id => @tab},:class=>"btn"%>
