--- a/modules/bootstrap/app/views/layouts/bootstrap_application_full.html.erb
+++ b/modules/bootstrap/app/views/layouts/bootstrap_application_full.html.erb
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale%>" class="<%= controller_action_css_class%>">
 <head>
-  <!--页面标题-->
-  <%= render :partial => "irm/common/application_title" %>
-
-  <!--加载基础javascript与css-->
-  <% require_jscss(:default) %>
-
-  <% require_jscss(:colorbox) %>
-
-  <!--加载ie6基础javascript与css-->
-  <% require_jscss(:default_ie6) if ie6? %>
-
-  <!--生成javascript与css 标签-->
-  <%=render_required_jscss%>
-
-
-  <%= csrf_meta_tag %>
-
-  <!--页面中添加的javascript-->
-  <% if content_for?(:page_script) %>
-    <%=javascript_tag(yield :page_script)%>
-  <% end %>
-
-
-  <%= render :partial => "irm/common/app_session_check" %>
-  <%= render :partial => "irm/common/address_bar_logo" %>
-
+  <%= render "layouts/head" %>
 
 </head>
 <body id ="body">
