--- a/app/views/skm/channels/index.html.erb
+++ b/app/views/skm/channels/index.html.erb
@@ -1,39 +1,21 @@
 <%= setting_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_channel_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="statusesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="channels_list" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "skm/channels", :action=>"edit",:id=>"{id}"}) %>
-            <%= link_to(t(:show),{:controller => "skm/channels", :action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>
-        </div>
-        <%= datatable("channels_list",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"channel_code",:label=>t(:label_skm_channel_code), :searchable => true,:width=>"100px"},
-                   {:key=>"name",:label=>t(:name), :searchable => true,:width=>"150px"},
-                   {:key=>"description",:label=>t(:description)},
-                   {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
-                  {:search_box => "statusesSearchBox",:paginator_box=>"channelsPaginatorBox"})%>
-        <div id="channelsPaginatorBox"></div>
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_channel_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="channelsSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="channels_list">
+      <%= datatable("channels_list",{:action=>"get_data",:format=>"json"},[],{:search_box => "channelsSearchBox",:paginator_box=>"channelsPaginatorBox"})%>
     </div>
+    <div id="channelsPaginatorBox"></div>
+  </div>
 </div>
