--- a/app/views/skm/channels/show.html.erb
+++ b/app/views/skm/channels/show.html.erb
@@ -1,111 +1,85 @@
-<% require_javascript(:extjs)  %>
-<% require_css(:extjs)  %>
-
 <%= setting_title %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_channel) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @channel },:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_channel) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @channel}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_channel_code)%></label></td>
+            <td class="data-2col"><%= @channel.channel_code%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-2col"><%= @channel[:name]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:description)%></label></td>
+            <td class="data-2col"><%= @channel[:description]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-2col"><%= check_img(@channel.status_code)%></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_channel_code)%></label></td>
-              <td class="data2Col"><%= @channel.channel_code%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="data2Col"><%= @channel[:name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:description)%></label></td>
-              <td class="data2Col"><%= @channel[:description]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="data2Col"><%= check_img(@channel.status_code)%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+</div>
+<!-- 知识分类 -->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_skm_channel_column) %></h2>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+          <tr>
+            <td class="label-col"></td>
+            <td>
+              <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data",  :format=>:json,:with_check=> @channel.column_ids ),
+                                                   :tree_id => "tree-div",
+                                                   :checkbox => true,
+                                                   :li_attrs => "id" } %>
+            </td>
+          </tr>
+      </tbody>
+    </table>
   </div>
-  <div class="pbBody">
-        <div class="pbSubheader tertiaryPalette">
-          <h3><%= t(:label_skm_channel_column) %></h3>
-        </div>
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"></td>
-                  <td class="data2Col">
-                    <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data",  :format=>:json,:with_check=> @channel.column_ids ),
-                                                         :tree_id => "tree-div",
-                                                         :checkbox => true,
-                                                         :li_attrs => "id" } %>
-                  </td>
-                </tr>
-            </tbody>
-          </table>
-        </div>
+</div>
+<!-- 配置属性列表 -->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_person_group)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:label_skm_channel_group_management), {:controller=>"skm/channels",:action => "new_groups",:id=>@channel.id},:class=>"btn"%>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="groupList">
+      <%= datatable("groupList",{:controller=>"skm/channels",:action=>"get_owned_groups_data",:id=>@channel.id,:format=>:json},[],{:paginator_box=>"groupPaginatorBox"})%>
     </div>
+    <div id="groupPaginatorBox"></div>
+  </div>
 </div>
 
-<div class="bRelatedList">
-    <div class="listRelatedObject setupBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3><%=t(:label_irm_person_group)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:label_skm_channel_group_management), {:controller=>"skm/channels",
-                                                          :action => "new_groups",:id=>@channel.id}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="pbBody lbBody">
-          <div id="groupList" class="datatable" style="width:100%;">
-            <div id="id" style="display:none">
-              <%= icon_link_remove({:controller=>"skm/channels",:action=>"remove_group",:group_id=>"{id}",
-                                      :channel_id=>@channel.id},:confirm => t(:label_are_you_sure) ,
-                                      :method => :delete) %>
-            </div>
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("groupList",{:controller=>"skm/channels",:action=>"get_owned_groups_data",:id=>@channel.id,:format=>:json},
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
-                               {:key=>"code",:label=>t(:label_irm_group_group_code), :width => "150px"},
-                               {:key=>"name",:label=>t(:label_irm_group_name), :width => "150px"},
-                               {:key=>"description",:label=>t(:label_irm_group_description)}],
-                               {:force_html=>true, :paginator_box=>"groupPaginatorBox"})%>
-          <!-- End company access table -->
-          <div id="groupPaginatorBox"></div>
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
 <script type="text/javascript">
   $(document).ready(function(){
       $("#tree-div").bind('nodeListener',function(event, element){
