--- a/app/views/irm/report_types/_form.html.erb
+++ b/app/views/irm/report_types/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@report_type,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+<%= form_for(@report_type,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
 
   <% content_for :form_block_a   do%>
     <table class="form-table">
