报表：通过知识库解决事故比例(%) 描述： 统计选定月份内关闭的事故单，通过调用知识库来回复的事故单与总数的比例 参数： 1.日期: 月份 2.应用系统 列：调用知识总数，调用知识比例，事故单总数 行：应用系统

--- a/app/views/icm/incident_journals/apply_entry_header.js.erb
+++ b/app/views/icm/incident_journals/apply_entry_header.js.erb
@@ -1,12 +1,12 @@
 <% if limit_device? %>
     $(function(){
-        $("#msgEditor").val("<%= escape_javascript(render("applyable_entry_header"))%>");
+        $("#msgEditor").val("<p apply_from_skm=true><%= escape_javascript(render("applyable_entry_header"))%></p>");
         $("#linktoSKM").addClass("hidden");
     });
 <% else %>
     Ext.onReady(function(){
-        Ext.getCmp("msgEditor").setValue("<%= escape_javascript(render("applyable_entry_header"))%>");
-        $("#msgEditor").val("<%= escape_javascript(render("applyable_entry_header"))%>");
+        Ext.getCmp("msgEditor").setValue("<p apply_from_skm=true><%= escape_javascript(render("applyable_entry_header"))%></p>");
+        $("#msgEditor").val("<p apply_from_skm=true><%= escape_javascript(render("applyable_entry_header"))%></p>");
         Ext.get("linktoSKM").addCls("hidden");
     });
 <%end%>
