--- a/app/views/irm/mail_templates/_edit_form.html.erb
+++ b/app/views/irm/mail_templates/_edit_form.html.erb
@@ -3,7 +3,7 @@
   .controls {
     display: inline-block;
   }
-  .controlTitle {
+  .control-title {
     background-color: #EAEAEA;
     border-color: #AAAAAA;
     border-style: solid;
@@ -12,13 +12,13 @@
     font-weight: bold;
     padding: 5px 8px;
   }
-  .controlItems {
+  .control-items {
       background-color: #FFFFFF;
       border: 1px solid #AAAAAA;
       padding: 5px 8px;
       white-space: nowrap;
   }
-  div.controlItems th {
+  div.control-items th {
       font-weight: bold;
   }
   .editor {
@@ -29,152 +29,152 @@
   }
 </style>
 <%= setting_title %>
-
-<%= form_for(@mail_template,:url=>{:action=>"update"},:html => {:id => "mail_template"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@mail_template,:url=>{:action=>"update"},:html => {:id => "mail_template"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_mail_template_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_mail_template_template_code)%></label></td>
+            <td class="data-2col"><label><%=@mail_template[:template_code]%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_mail_template_template_type)%></label></td>
+            <td class="data-2col" style="vertical-align: middle;">
+              <%=f.radio_button :template_type,"html"%><%=t(:label_irm_mail_html_template_type)%>
+              <%=f.radio_button :template_type,"simple"%><%=t(:label_irm_mail_simple_template_type)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_mail_template_status_code)%></label></td>
+            <td class="data-col"><%=f.select :status_code,options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@mail_template.status_code)%>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"></td>
+            <td class="data-2col">
+              <div class="controls">
+              <div class="control-title">
+                <%= t(:label_irm_mail_template_parameter_field) %>
+              </div>
+                <div class="control-items">
+                  <table>
+                    <tr>
+                      <th><%= t(:label_irm_mail_template_parameter_bo) %></th>
+                      <th><%= t(:label_irm_mail_template_parameter_field_name) %></th>
+                      <th><%= t(:label_irm_mail_template_parameter_field_key) %></th>
+                    </tr>
+                    <tr>
+                      <td><%=blank_select_tag :parameter_bo,available_business_object,{}, {:id=>"parameter_bo",:required=>true}%></td>
+                      <td><%=blank_select_tag(:parameter_field_name,[],nil,{:id=>"parameter_field_name",
+                                 :href=>url_for(:controller=>"irm/object_attributes",:action=>"all_columns",:format=>"json",:business_object_code=>"${parameter_bo}"),
+                                 :depend=>"parameter_bo",}) %>
+                      </td>
+                      <td><%= text_field_tag(:parameter_field_key,"",{:id=>"parameter_field_key",:size=>40}) %></td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @mail_template%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend"><span class="requiredExampleOuter">
-          <span class="requiredExample">&nbsp;</span></span>
-           <span class="requiredMark">*</span><span class="requiredText"> = <%=t(:label_is_required)%></span></span></span>
-      <h3><%=t(:label_irm_mail_template_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_template_code)%></label></td>
-              <td class="data2Col"><%=@mail_template[:template_code]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_template_type)%></label></td>
-              <td class="data2Col"><%=f.radio_button :template_type,"html"%><%=t(:label_irm_mail_html_template_type)%>
-                    <%=f.radio_button :template_type,"simple"%><%=t(:label_irm_mail_simple_template_type)%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_mail_template_status_code)%></label></td>
-              <td class="dataCol"><%=f.select :status_code,options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@mail_template.status_code)%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"></td>
-              <td class="data2Col">
-                <div class="controls">
-	              <div class="controlTitle">
-	              	<%= t(:label_irm_mail_template_parameter_field) %>
-	              </div>
-                  <div class="controlItems">
-                    <table>
-                      <tr>
-                        <th><%= t(:label_irm_mail_template_parameter_bo) %></th>
-                        <th><%= t(:label_irm_mail_template_parameter_field_name) %></th>
-                        <th><%= t(:label_irm_mail_template_parameter_field_key) %></th>
-                      </tr>
-                      <tr>
-                        <td><%=blank_select_tag :parameter_bo,available_business_object,{}, {:id=>"parameter_bo",:required=>true}%></td>
-                        <td><%=blank_select_tag(:parameter_field_name,[],nil,
-                                  {:id=>"parameter_field_name",
-                                   :href=>url_for(:controller=>"irm/object_attributes",:action=>"all_columns",:format=>"json",:business_object_code=>"${parameter_bo}"),
-                                   :depend=>"parameter_bo",
-                                   }) %></td>
-                        <td><%= text_field_tag(:parameter_field_key,"",{:id=>"parameter_field_key",:size=>40}) %></td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-          <span class="requiredExample">&nbsp;</span></span>
-           <span class="requiredMark">*</span><span class="requiredText"> = <%=t(:label_is_required)%></span></span></span>
-           <h3><%=t(:label_irm_mail_template_content)%></h3>
-    </div>
-    <div class="pbSubsection" id="showTab" current="<%=I18n.locale %>"></div>
-    <div class="pbSubsection" id="templateBody" style="display:none" current="<%=I18n.locale %>">
-      <ul>
+  <% end %>
+
+  <% content_for :form_block_tabs do %>
+    <div class="tabbable" style="margin: 5px;">
+      <ul class="nav nav-tabs"  currentlang="<%= I18n.locale %>">
         <% available_languages.each do |language| %>
-          <li><a class="language" id="<%= language[:language_code]%>" ref="template<%= language[:language_code]%>" href="#template<%= language[:language_code]%>"><%= language[:description] %></a></li>
+           <li <% if I18n.locale.to_s.eql?language[:language_code].to_s %> class="active" <% end %>><a class="language" data-toggle="tab" id="<%= language[:language_code]%>" ref="template<%= language[:language_code]%>" href="#template<%= language[:language_code]%>"><%= language[:description] %></a></li>
         <% end %>
       </ul>
-      <div>
-      <%= f.fields_for :mail_templates_tls,:normal=>true do |tl_f|%>
-        <%= tl_f.hidden_field :mail_body, {:id => 'mail_body_value'+tl_f.object.language} %>
-        <div id="template<%= tl_f.object.language%>">
-          <div class="page-block">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_mail_template_name)%></label></td>
-                  <td class="data2Col"><%=tl_f.text_field :name ,:size=>45,:required=>true%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_mail_template_description)%></label></td>
-                  <td class="data2Col"><%=tl_f.text_field :description ,:size=>80%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_mail_template_subject)%></label></td>
-                  <td class="data2Col"><%=tl_f.text_field :subject ,:size=>80,:required=>true%></td>
-                </tr>
+      <div class="tab-content">
+        <%= f.fields_for :mail_templates_tls,:normal=>true do |tl_f|%>
+          <%= tl_f.hidden_field :mail_body, {:id => 'mail_body_value'+tl_f.object.language} %>
+            <div class="tab-pane<% if I18n.locale.to_s.eql?tl_f.object.language.to_s %> active <% end %>" id="template<%= tl_f.object.language%>">
+              <table class="form-table">
+                <tbody>
+                    <tr>
+                      <td class="label-col"><label><%=t(:label_irm_mail_template_name)%></label></td>
+                      <td class="data-2col"><%=tl_f.text_field :name ,:size=>45,:required=>true%></td>
+                    </tr>
+                    <tr>
+                      <td class="label-col"><label><%=t(:label_irm_mail_template_description)%></label></td>
+                      <td class="data-2col"><%=tl_f.text_field :description ,:size=>80%></td>
+                    </tr>
+                    <tr>
+                      <td class="label-col"><label><%=t(:label_irm_mail_template_subject)%></label></td>
+                      <td class="data-2col"><%=tl_f.text_field :subject ,:size=>80,:required=>true,:class=>"span5" %></td>
+                    </tr>
 
-                <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_mail_template_mail_body)%></label></td>
-                  <td class="data2Col" colspan="3" style="width: 618px; height: 201px;">
-                    <div class="requiredInput">
-                      <div class="requiredBlock"></div>
-                      <div id="editor<%= tl_f.object.language%>" class="editor"></div>
-                    </div>
-                  </td>
-                </tr>
-            </tbody>
-          </table>
-          </div>
-        </div>
-      <%end%>
+                    <tr>
+                      <td class="label-col"><label><%=t(:label_irm_mail_template_mail_body)%></label></td>
+                      <td class="data-2col" colspan="3" style="width: 618px; height: 201px;">
+                        <div class="requiredInput">
+                          <div class="requiredBlock"></div>
+                          <div id="editor<%= tl_f.object.language%>" class="editor"></div>
+                        </div>
+                      </td>
+                    </tr>
+                </tbody>
+              </table>
+            </div>
+        <% end %>
       </div>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_mail_template_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_mail_template_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+        <!-- Tabs -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_mail_template_content)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_tabs %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
+
+
 <script type="text/javascript">
-  Ext.onReady(function(){
+  $(document).ready(function(){
       var languages = [];
-      var currentLanguage = Ext.get("templateBody").dom.getAttribute("current");
+      var currentLanguage =  $(".nav-tabs:first").attr("currentlang");
       var currentIndex = 0;
       var currentEditor;
       var editors = new Array();
@@ -182,24 +182,23 @@
       var htmlMode = require("ace/mode/html").Mode;
       var plainMode = require("ace/mode/text").Mode;
       var currentMode = $("input[name='irm_mail_template[template_type]'][checked]").val();
-      Ext.each(Ext.query("#templateBody ul li a.language"),function(e){
-         languages.push({contentEl:e.getAttribute("ref"),title:e.innerHTML,ref:e.id});
+      $(".nav-tabs:first li a.language").each(function(){
+          languages.push({contentEl:$(this).attr("ref"),title:$(this).html,ref:$(this).attr("id")});
       });
       for(var i=0;i<languages.length;i++) {
           var editor= ace.edit("editor"+languages[i].ref);
           if(currentMode && currentMode == 'simple') {
-            editor.getSession().setMode(new plainMode());
+              editor.getSession().setMode(new plainMode());
           }else {
-            editor.getSession().setMode(new htmlMode());
+              editor.getSession().setMode(new htmlMode());
           }
           editor.getSession().setValue($("#mail_body_value"+languages[i].ref).val());
           if(languages[i].ref == currentLanguage) {
-             currentIndex = i;
-             currentEditor = editor;
+            currentIndex = i;
+            currentEditor = editor;
           }
           editors.push(editor);
       }
-
       //点击切换模式函数处理
       $("[name='irm_mail_template[template_type]']:radio").bind("click",function(){
           if ($(this).val() && $(this).val() == 'simple') {
@@ -215,16 +214,6 @@
                 editors[i].getSession().setMode(new htmlMode());
              }
           }
-      });
-
-      var languageTabs = Ext.createWidget('tabpanel', {
-          renderTo: 'showTab',
-          width: Ext.get("showTab").getComputedWidth(),
-          activeTab: currentIndex,
-          defaults :{
-              bodyPadding: 0
-          },
-          items: [languages]
       });
 
       //提交表单之前将编辑器中的内容保存到隐藏表单中
@@ -243,5 +232,6 @@
           }else
             $("#parameter_field_key").val("");
       });
+
   });
 </script>
