--- a/app/views/irm/mail_templates/_new_form.html.erb
+++ b/app/views/irm/mail_templates/_new_form.html.erb
@@ -1,9 +1,8 @@
-<% require_javascript([:ace]) %>
 <style type="text/css">
   .controls {
     display: inline-block;
   }
-  .controlTitle {
+  .control-title {
     background-color: #EAEAEA;
     border-color: #AAAAAA;
     border-style: solid;
@@ -12,13 +11,13 @@
     font-weight: bold;
     padding: 5px 8px;
   }
-  .controlItems {
+  .control-items {
       background-color: #FFFFFF;
       border: 1px solid #AAAAAA;
       padding: 5px 8px;
       white-space: nowrap;
   }
-  div.controlItems th {
+  div.control-items th {
       font-weight: bold;
   }
   #editor {
@@ -29,116 +28,114 @@
  }
 </style>
 <%= setting_title %>
-<%= form_for(@mail_template,:url=>{:action=>"create"},:html => {:id => "mail_template"}, :builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@mail_template,:url=>{:action=>"create"},:html => {:id => "mail_template"}, :builder => CustomFormBuilder) do |f| %>
 <%= f.hidden_field :mail_body, {:id => 'mail_body_value'} %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_mail_template_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_template_code)%></label></td>
+           <td class="data-2col"><%=f.text_field :template_code,:size=>30,:required=>true,:irm_uppercase=>true %></td>
+         </tr>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_name)%></label></td>
+           <td class="data-2col"><%=f.text_field :name ,:size=>45,:required=>true%></td>
+         </tr>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_description)%></label></td>
+           <td class="data-2col"><%=f.text_field :description ,:size=>80%></td>
+         </tr>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_template_type)%></label></td>
+           <td class="data-2col" style="vertical-align: middle;">
+             <%=f.radio_button :template_type,"html",:checked => true%><%=t(:label_irm_mail_html_template_type)%>
+             <%=f.radio_button :template_type,"simple"%><%=t(:label_irm_mail_simple_template_type)%>
+           </td>
+         </tr>
+         <tr>
+           <td class="label-col"></td>
+           <td class="data-2col">
+             <div class="controls">
+              <div class="control-title">
+                <%= t(:label_irm_mail_template_parameter_field) %>
+              </div>
+               <div class="control-items">
+                 <table>
+                   <tr>
+                     <th><%= t(:label_irm_mail_template_parameter_bo) %></th>
+                     <th><%= t(:label_irm_mail_template_parameter_field_name) %></th>
+                     <th><%= t(:label_irm_mail_template_parameter_field_key) %></th>
+                   </tr>
+                   <tr>
+                     <td><%=blank_select_tag :parameter_bo,available_business_object,{}, {:id=>"parameter_bo",:required=>true}%></td>
+                     <td><%=blank_select_tag(:parameter_field_name,[],nil,{:id=>"parameter_field_name",
+                                :href=>url_for(:controller=>"irm/object_attributes",:action=>"all_columns",:format=>"json",:business_object_code=>"${parameter_bo}"),
+                                :depend=>"parameter_bo"}) %>
+                     </td>
+                     <td><%= text_field_tag(:parameter_field_key,"",{:id=>"parameter_field_key",:size=>40}) %></td>
+                   </tr>
+                 </table>
+               </div>
+             </div>
+           </td>
+         </tr>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_subject)%></label></td>
+           <td class="data-2col"><%=f.text_field :subject ,:size=>80,:required=>true,:class=>"span5"%></td>
+         </tr>
+         <tr>
+           <td class="label-col"><label><%=t(:label_irm_mail_template_mail_body)%></label></td>
+           <td class="data-2col" style="width: 800px; height: 201px;">
+             <div class="form-field-required">
+               <span class="form-field-required-flag"></span>
+               <div id="editor"></div>
+             </div>
+           </td>
+         </tr>
+     </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_mail_template_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_mail_template_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-  <div class="pbBody">
-    <%= error_for @mail_template%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-            </span>
-          <span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-      </span>
-      <h3><%=t(:label_irm_mail_template_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_template_code)%></label></td>
-              <td class="data2Col"><%=f.text_field :template_code,:size=>30,:required=>true,:irm_uppercase=>true %></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_name)%></label></td>
-              <td class="data2Col"><%=f.text_field :name ,:size=>45,:required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_description)%></label></td>
-              <td class="data2Col"><%=f.text_field :description ,:size=>80%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_template_type)%></label></td>
-              <td class="data2Col"><%=f.radio_button :template_type,"html",:checked => true%><%=t(:label_irm_mail_html_template_type)%>
-                    <%=f.radio_button :template_type,"simple"%><%=t(:label_irm_mail_simple_template_type)%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"></td>
-              <td class="data2Col">
-                <div class="controls">
-	              <div class="controlTitle">
-	              	<%= t(:label_irm_mail_template_parameter_field) %>
-	              </div>
-                  <div class="controlItems">
-                    <table>
-                      <tr>
-                        <th><%= t(:label_irm_mail_template_parameter_bo) %></th>
-                        <th><%= t(:label_irm_mail_template_parameter_field_name) %></th>
-                        <th><%= t(:label_irm_mail_template_parameter_field_key) %></th>
-                      </tr>
-                      <tr>
-                        <td><%=blank_select_tag :parameter_bo,available_business_object,{}, {:id=>"parameter_bo",:required=>true}%></td>
-                        <td><%=blank_select_tag(:parameter_field_name,[],nil,
-                                  {:id=>"parameter_field_name",
-                                   :href=>url_for(:controller=>"irm/object_attributes",:action=>"all_columns",:format=>"json",:business_object_code=>"${parameter_bo}"),
-                                   :depend=>"parameter_bo",
-                                   }) %></td>
-                        <td><%= text_field_tag(:parameter_field_key,"",{:id=>"parameter_field_key",:size=>40}) %></td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_subject)%></label></td>
-              <td class="data2Col"><%=f.text_field :subject ,:size=>80,:required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_mail_template_mail_body)%></label></td>
-              <td class="data2Col" colspan="3" style="width: 800px; height: 201px;">
-                <div class="requiredInput">
-                  <div class="requiredBlock"></div>
-                  <div id="editor"></div>
-                </div>
-              </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
+
 <script type="text/javascript">
   window.onload = function() {
     var editor = ace.edit("editor");
