--- a/app/views/irm/delayed_jobs/item_list.html.erb
+++ b/app/views/irm/delayed_jobs/item_list.html.erb
@@ -1,76 +1,46 @@
 <%= app_title %>
-<div class="listRelatedObject setupBlock">
-
-    <div id="ep" class="detail-block page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_delayed_job_info) %></h2></td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_delayed_jobs_record_run_at)%></label></td>
-                  <td class="data2Col"><%=@log.run_at.strftime("%F %T")%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_delayed_jobs_record_end_at)%></label></td>
-                  <td class="data2Col"><%=@log.end_at.strftime("%F %T") if @log.end_at.present?%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_delayed_jobs_record_handler)%></label></td>
-                  <td class="data2Col"><%=raw(@log.handler)%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_delayed_jobs_record_item_attempt)%></label></td>
-                  <td class="data2Col"><%=@log.attempts%></td>
-                </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_delayed_jobs_record_item) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-              </td>
-              <td class="pbHelp">
-
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="pbBody">
-        <div id="delayed_job" class="datatable" style="width:100%;">
-          <div id="content" style="display:none">
-            <script type="text/javascript">
-
-            </script>
-          </div>
-         </div>
-      </div>
-        <%= datatable("delayed_job",{:action=>"get_item_data",:controller => "irm/delayed_jobs",:delayed_job_id => @log.delayed_job_id},
-                  [{:key=>"id",:label=>t(:edit),:hidden=>true},
-                   {:key=>"created_at",:label=>t(:label_irm_delayed_jobs_record_item_record_at),:width=>"90px"},
-                   {:key=>"job_status_name",:label=>t(:label_irm_delayed_jobs_record_status),:width=>"90px"},
-                   {:key=>"content",:label=>t(:label_irm_delayed_jobs_record_item_content),:formatter=>"Y.irm.template",:width=>"400px"}])%>
-        <div id="companiesPaginatorBox"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_delayed_job_info) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:back), {:action => "index"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_delayed_jobs_record_run_at)%></label></td>
+            <td class="data-2col"><%=@log.run_at.strftime("%F %T")%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_delayed_jobs_record_end_at)%></label></td>
+            <td class="data-2col"><%=@log.end_at.strftime("%F %T") if @log.end_at.present?%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_delayed_jobs_record_handler)%></label></td>
+            <td class="data-2col"><%=raw(@log.handler)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_delayed_jobs_record_item_attempt)%></label></td>
+            <td class="data-2col"><%=@log.attempts%></td>
+          </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_delayed_jobs_record_item) %></h2>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="menu_entries_list"></div>
+    <%= datatable("delayed_job",{:action=>"get_item_data",:controller => "irm/delayed_jobs",:delayed_job_id => @log.delayed_job_id},[])%>
+  </div>
 </div>
