--- a/app/views/irm/kanbans/edit.html.erb
+++ b/app/views/irm/kanbans/edit.html.erb
@@ -1,74 +1,62 @@
 <%= common_title(:show_data=>@kanban[:name]) %>
-<%= form_for(@kanban,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@kanban,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_kanban_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_kanban_code)%></label></td>
+            <td class="data-2col"><label><%=@kanban.kanban_code%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-2col"><%=f.text_field :name, :required=>true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
+            <td class="data-2col"><%=f.text_field :refresh_interval, :required=>true, :size =>5, :irm_number_only => true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_lane_limit)%></label></td>
+            <td class="data-2col"><%=f.text_field :limit, :required=>true, :size =>5%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :description)%></label></td>
+            <td class="data-2col"><%=f.text_area :description, :rows => 4,:class=>"input-xlarge"%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @kanban%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel),{:action => "index"},{:class=>"btn cancel"}%>
+  <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_kanban_edit)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_kanban_code)%></label></td>
-              <td class="data2Col"><%=@kanban.kanban_code%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="data2Col"><%=f.text_field :name, :required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="data2Col"><%=f.text_area :description, :rows => 4%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
-              <td class="data2Col"><%=f.text_field :refresh_interval, :required=>true, :size =>5, :irm_number_only => true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_lane_limit)%></label></td>
-              <td class="data2Col"><%=f.text_field :limit, :required=>true, :size =>5%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-
-
-
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
