--- a/app/views/irm/kanbans/select_lanes.html.erb
+++ b/app/views/irm/kanbans/select_lanes.html.erb
@@ -1,44 +1,32 @@
 <%= common_title%>
+<style type="text/css">
+  .page-block-button form {
+      margin: 0;
+  }
+</style>
 <% if @kanban %>
-    <%= form_tag({:action => 'add_lanes',:id => @kanban}) do%>
-        <%= hidden_field_tag "return_url", @return_url%>
-        <%= hidden_field_tag(:lane_ids) %>
-        <div class="page-block">
-            <div class="pbHeader">
-                <table cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_select_result) %></h2></td>
-                      <td id="topButtonRow1" class="pbButton">
-                        <div class="button"><%= submit_tag t(:save)%></div>
-                        <% if !@return_url.blank? %>
-                          <div class="button"><%= link_to t(:cancel), @return_url%></div>
-                        <% else %>
-                          <div class="button"><%= link_to t(:cancel), {:action => "show",:id=>@kanban}%></div>
-                        <% end %>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-            </div>
-        </div>
-    <% end %>
-    <div id="ep" class="edit-block">
-      <div class="pbBody">
-            <div id="available_lanes_list" class="datatable" style="width:100%;">
-              <div id="id" style="display:none">
-                 <%= check_box_tag "irm_kanban_lanes[ids][]","{id}"%>
-              </div>
-            </div>
-            <%= datatable("available_lanes_list",{:action=>"get_available_lanes", :id=>@kanban},
-                      [{:key=>"id",:label=>t(:select_ac),:formatter=>"Y.irm.template",:width=>"20px"},
-                       {:key=>"lane_code",:label=>t(:label_irm_lane_code), :width => "15%"},
-                       {:key=>"lane_name",:label=>t(:name), :width => "25%"},
-                       {:key=>"lane_description",:label=>t(:description)},
-                       {:key=>"limit",:label=>t(:label_irm_lane_limit), :width => "80px"}
-                       ],
-                       {:paginator_box=>"available_lanesPaginatorBox",:select=>"multiple",:force_html=>true})%>
-            <div id="available_lanesPaginatorBox"></div>
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_select_result) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= form_tag({:action => 'add_lanes',:id => @kanban}) do%>
+            <%= hidden_field_tag "return_url", @return_url%>
+            <%= hidden_field_tag(:lane_ids) %>
+            <%= link_submit t(:save), :class=>"btn btn-primary" %>
+            <% if !@return_url.blank? %>
+              <%= link_to t(:cancel), @return_url, :class => "btn"%>
+            <% else %>
+              <%= link_to t(:cancel), {:action => "show",:id=>@kanban},:class => "btn"%>
+            <% end %>
+          <% end %>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <div id="available_lanes_list"></div>
+        <%= datatable("available_lanes_list",{:action=>"get_available_lanes", :id=>@kanban},[],{:paginator_box=>"paginatorBox",:select=>"multiple"})%>
       </div>
     </div>
 <% end %>
