--- a/app/views/irm/kanbans/show.html.erb
+++ b/app/views/irm/kanbans/show.html.erb
@@ -1,96 +1,61 @@
 <%= common_title(:show_data=>@kanban[:name]) %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_kanban) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @kanban},:class=>"btn btn-primary"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_kanban) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @kanban}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"} %></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_kanban_code)%></label></td>
+            <td class="data-2col"><div><%= @kanban.kanban_code%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-2col"><div><%= @kanban[:name]%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :description)%></label></td>
+            <td class="data-2col"><%= @kanban[:description]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
+            <td class="data-2col"><%= @kanban.refresh_interval%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_lane_limit)%></label></td>
+            <td class="data-2col"><%= @kanban.limit%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-2col"><div><%= check_img(@kanban.status_code)%></div></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_kanban_code)%></label></td>
-              <td class="data2Col"><div><%= @kanban.kanban_code%></div></td>
-            </tr>        
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="data2Col"><div><%= @kanban[:name]%></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="data2Col"><%= @kanban[:description]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_kanban_refresh_interval)%></label></td>
-              <td class="data2Col"><%= @kanban.refresh_interval%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_lane_limit)%></label></td>
-              <td class="data2Col"><%= @kanban.limit%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="data2Col"><div><%= check_img(@kanban.status_code)%></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+</div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_kanban_owned_lane)%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:label_irm_kanban_add_lane), {:controller=>"irm/kanbans",:action => "select_lanes",:id=>@kanban.id},:class => "btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="owned_lanes_list"></div>
+    <%= datatable("owned_lanes_list",{:controller=>"irm/kanbans",:action=>"get_owned_lanes",:id=>@kanban.id},[])%>
   </div>
 </div>
-
-<div class="bRelatedList">
-    <div class="listRelatedObject taskBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3><%=t(:label_irm_kanban_owned_lane)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:label_irm_kanban_add_lane), {:controller=>"irm/kanbans",
-                                                          :action => "select_lanes",:id=>@kanban.id}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="pbBody">
-          <div id="owned_lanes_list" class="datatable" style="width:100%;">
-            <div id="id" style="display:none">
-              <%= icon_link_remove({:controller=>"irm/kanbans",:action=>"delete_lane",:lane_id=>"{irm_lane_id}",:kanban_id => @kanban.id},:confirm => t(:label_are_you_sure) ,
-                                      :method => :delete) %>&nbsp;
-              <%= icon_link("btn_up", t(:move_up), {:controller => "irm/kanbans", :action => "up_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>&nbsp;
-              <%= icon_link("btn_down", t(:move_down), {:controller => "irm/kanbans", :action => "down_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>
-            </div>
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("owned_lanes_list",{:controller=>"irm/kanbans",:action=>"get_owned_lanes",:id=>@kanban.id},
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                               {:key => "irm_lane_id", :hidden =>true},
-                               {:key=>"lane_code",:label=>t(:label_irm_lane_code),:width => "150px"},
-                               {:key=>"lane_name",:label=>t(:name), :width => "150px"},
-                               {:key=>"lane_description",:label=>t(:description), :width => "200px"}])%>
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
-
 
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@kanban} %>
