--- a/app/views/irm/ldap_sources/_data_grid.html.erb
+++ b/app/views/irm/ldap_sources/_data_grid.html.erb
@@ -12,9 +12,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="channels_list">
-      <%= datatable("ldap_sources_list",{:controller => "irm/ldap_sources", :action=>"get_data",:format=>"json"},[],{:search_box=>"sourcesSearchBox",:paginator_box=>"ldapSourcePaginator"})%>
-    </div>
+    <div id="channels_list"></div>
+    <%= datatable("ldap_sources_list",{:controller => "irm/ldap_sources", :action=>"get_data",:format=>"json"},[],{:search_box=>"sourcesSearchBox",:paginator_box=>"ldapSourcePaginator"})%>
     <div id="ldapSourcePaginator"></div>
   </div>
 </div>
