公告管理==>公告栏目 所有页面bootstrap样式

--- a/app/views/skm/entry_headers/index.html.erb
+++ b/app/views/skm/entry_headers/index.html.erb
@@ -1,3 +1,2 @@
-<%= common_title(:model_meaning=>t(:label_skm),
-                 :buttons => render(:partial => "new_as_button")) %>
+<%= common_title(:model_meaning=>t(:label_skm),:buttons => render(:partial => "new_as_button")) %>
 <%= render "data_grid" %>
